Fixed compatibility issues with Java 17